--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.6.2",
+    "framer-motion": "^10.18.0",
+    "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.4",
-    "tailwindcss": "^3.3.5",
-    "lucide-react": "^0.292.0",
-    "recharts": "^2.10.3",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.30.3",
+    "recharts": "^2.10.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
     "react-scripts": "5.0.1",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31"
+    "tailwindcss": "^3.4.19"
   },
   "scripts": {
     "start": "react-scripts start",
