--- a/server/package.json
+++ b/server/package.json
@@ -9,18 +9,22 @@
     "dev": "nodemon src/server.js",
     "setup": "node src/utils/setupDatabase.js"
   },
-  "keywords": ["veterinary", "disease-detection", "agriculture"],
+  "keywords": [
+    "veterinary",
+    "disease-detection",
+    "agriculture"
+  ],
   "author": "PashuDrishti Team",
   "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.2",
-    "dotenv": "^16.3.1",
-    "jwt-simple": "^0.5.6",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
     "axios": "^1.6.2",
-    "cloudinary": "^1.35.0"
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.35.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
+    "jwt-simple": "^0.5.6",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.17.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
